microconfig-core/src/test/resources/repo/components/exceptions/bad/badPlaceholder/exception.component
Can't build configs for root component 'badPlaceholder[component]'.
Exception in
	../components/exceptions/bad/badPlaceholder/application.component.yaml:1'
	key=${missing@missing}
Can't resolve ${missing@missing}
Cause: Component 'missing' doesn't exist.